fix: change dimension of images to rendering on small devices

--- a/src/App.css
+++ b/src/App.css
@@ -603,8 +603,7 @@ footer a:hover, .top-sign a:hover {
   margin-right: 5px;
 }
 .single-project img.large{
-  height: 400px;
-  width: 550px;
+  width: 90%;
 }
 .single-project img.small{
   height: 200px;
